--- a/about/about.html
+++ b/about/about.html
@@ -29,7 +29,7 @@
           effort. </p>
         <button class="button-default button-sign-in"> Sign in free</button>
 
-        <div class="phone-images"> 
+        <div class="phone-images">
           <img src="img/temp-phone.svg">
         </div>
       </div>
@@ -41,22 +41,28 @@
           The more your content performs, the more you get paid!</p>
         <ol>
           <li>
-            <img src="img/icon-1.webp" alt="step 1 image">
-            <h3>Step.1</h3>
-            <h4>CONNECT</h4>
-            <p>One click is enough to start your journey.</p>
+            <div class="image-wrapper"> <img src="img/icon-1.webp" alt="step 1 image"></div>
+            <div class="content-wrapper">
+              <h3>Step.1</h3>
+              <h4>CONNECT</h4>
+              <p>One click is enough to start your journey.</p>
+            </div>
           </li>
           <li>
-            <img src="img/icon-2.webp" alt="step 2 image">
-            <h3>Step.2</h3>
-            <h4>CHOOSE</h4>
-            <p>Select campaigns that align with your interests and audience.</p>
+            <div class="image-wrapper"><img src="img/icon-2.webp" alt="step 2 image"></div>
+            <div class="content-wrapper">
+              <h3>Step.2</h3>
+              <h4>CHOOSE</h4>
+              <p>Select campaigns that align with your interests and audience.</p>
+            </div>
           </li>
           <li>
-            <img src="img/icon-3.webp" alt="step 3 image">
-            <h3>Step.3</h3>
-            <h4>EARN</h4>
-            <p>Get automatically tracked results and receive payments instantly.</p>
+            <div class="image-wrapper"><img src="img/icon-3.webp" alt="step 3 image"></div>
+            <div class="content-wrapper">
+              <h3>Step.3</h3>
+              <h4>EARN</h4>
+              <p>Get automatically tracked results and receive payments instantly.</p>
+            </div>
           </li>
         </ol>
       </div>
@@ -67,7 +73,8 @@
       <div class="content">
         <div class="content-wrapper">
           <h2> Maximize your growth with our advanced analytics tools!</h2>
-          <p class="sub-context"> 우리꺼는여 실시간으로 로그도 볼 수 있구여, 구체적인 지표를 제공해서 당신의 컨텐츠를 분석해준다구여(아마도) <br><br>그러니 한번 써보시라구요!       </p>
+          <p class="sub-context"> 우리꺼는여 실시간으로 로그도 볼 수 있구여, 구체적인 지표를 제공해서 당신의 컨텐츠를 분석해준다구여(아마도) <br><br>그러니 한번 써보시라구요!
+          </p>
           <button class="button-default button-sign-in ">Sign in free</button>
         </div>
         <div class="image-wrapper">
@@ -75,20 +82,32 @@
         </div>
       </div>
     </section>
-    <section class="content-4"> 
+    <section class="content-4">
       <div class="content">
         <h2>All features of Linkplorer are <strong> 100% free!</strong></h2>
         <p class="sub-context">Join Linkplorer today and elevate your creative journey!</p>
-       
+
         <button class="button-default button-sign-in ">Get started -- It's free</button>
-      
+
       </div>
     </section>
   </main>
   <footer>
     <div class="content">
-    [개인정보처리방침]  [어쩌고]  [문의하기]  <img src="img/logo-instagram.svg">
-   </div>
+      <img src="img/logo-horizental-2.svg">
+      <div class="sub-context">
+        <div class="links">
+          <a href="" class="right-margin">Privacy Policy</a>
+          <a href="" class="right-margin">Terms and Conditions</a>
+          <a href="" class="right-margin">Cookie Consent</a>
+        </div>
+        <div class="copyrights">
+          <p>© 2024 <a href="https://kremaworldwide.com/" alt="Dexter Krema Co.,Ltd Homepage">Dexter Krema Co.,Ltd.</a>
+            All rights reserved. 대한민국 서울특별시 강남구 테헤란로 427, 7층(삼성동, 위워크타워)</p>
+          <p><a href="https://lordicon.com/">Animated icons by
+              Lordicon.com</a></p>
+        </div>
+      </div>
   </footer>
 </body>
 
